--- a/less/index.less
+++ b/less/index.less
@@ -50,10 +50,12 @@ table {
 
 /* Set every element's box-sizing to border-box */
 * {
-    box-sizing: border-box;
+	box-sizing: border-box;
+	font-size: 62.5%;
 }
 
 html, body {
-    height: 100%;
+	height: 100%;
+	font-size: 1.6rem;
 }
 
