--- a/less/index.less
+++ b/less/index.less
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Baloo+Bhai|Raleway');
 // Is this working?
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
@@ -58,4 +59,8 @@ html, body {
 	height: 100%;
 	font-size: 1.6rem;
 }
+
+// Global variables
+@Header-font:'Baloo Bhai', cursive;
+@body-font: 'Raleway', sans-serif;
 
