Add: less style

--- a/less/index.less
+++ b/less/index.less
@@ -64,3 +64,13 @@ html, body {
 @Header-font:'Baloo Bhai', cursive;
 @body-font: 'Raleway', sans-serif;
 
+.display(){
+	display: flex;
+}
+
+header{
+	font-family: @body-font;
+	justify-items: end;
+
+}
+
