--- a/css/index.css
+++ b/css/index.css
@@ -148,8 +148,38 @@ body {
   height: 100%;
   font-size: 1.6rem;
 }
+.container {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  margin: 0 auto;
+  font-family: 'Raleway', sans-serif;
+}
 header {
   font-family: 'Raleway', sans-serif;
   display: flex;
-  justify-items: end;
+  justify-content: flex-end;
+}
+header a {
+  text-decoration: none;
+  color: #2C353A;
+  padding: 20px;
+}
+.upper-section {
+  width: 100%;
+  height: auto;
+  padding: 2.4rem;
+  margin: 0 auto;
+  background-color: #F1F2EE;
+}
+.upper-section img {
+  padding: 15% 0;
+}
+.upper-section h1 {
+  font-family: 'Baloo Bhai', cursive;
+  font-size: 2rem;
+}
+.upper-section p {
+  font-size: 0.8rem;
+  padding: 1rem;
 }
