--- a/less/index.less
+++ b/less/index.less
@@ -63,15 +63,59 @@ html, body {
 // Global variables
 @Header-font:'Baloo Bhai', cursive;
 @body-font: 'Raleway', sans-serif;
+@grey: #2C353A;
+@cyan: #E0FBFC;
+@bck-grey: #F1F2EE;
 
 .display(){
 	display: flex;
+}
+// Header section......
+
+.container{
+	.display;
+	flex-direction: column;
+	width: 80%;
+	margin: 0 auto;
+	font-family: @body-font;
 }
 
 header{
 	font-family: @body-font;
 	.display;
-	justify-items: end;
+	justify-content: flex-end;
 
+	a{
+		text-decoration: none;
+		color: @grey;
+		padding: 20px;
+	}	
 }
+
+// <!-- fisrt introduction secction.... -->
+
+.upper-section{
+	width: 100%;
+	height: auto;
+	padding: 2.4rem;
+	margin: 0 auto;
+	background-color:@bck-grey;
+
+	img{
+		padding: 15% 0;
+	}
+
+	h1{
+		font-family: @Header-font;
+		font-size: 2rem;
+	}
+	
+	p{
+		font-size: 0.8rem;
+		padding: 1rem 0;
+	}
+
+	.block
+}
+
 
