Add: upper header style

--- a/less/index.less
+++ b/less/index.less
@@ -115,7 +115,16 @@ header{
 		padding: 1rem 0;
 	}
 
-	.block
+	.block{
+		border-top: 1px solid grey;	
+	button{
+		padding: 0.3rem;
+		background-color: #028090;
+		color: @cyan;
+		font-size: 0.8rem;
+		border-radius: 10px;
+	}
+	}
 }
 
 
