--- a/css/index.css
+++ b/css/index.css
@@ -181,5 +181,15 @@ header a {
 }
 .upper-section p {
   font-size: 0.8rem;
-  padding: 1rem;
+  padding: 1rem 0;
+}
+.upper-section .block {
+  border-top: 1px solid grey;
+}
+.upper-section .block button {
+  padding: 0.3rem;
+  background-color: #028090;
+  color: #E0FBFC;
+  font-size: 0.8rem;
+  border-radius: 10px;
 }
