--- a/less/index.less
+++ b/less/index.less
@@ -127,4 +127,32 @@ header{
 	}
 }
 
+.middle-section{
+	.display;
+	justify-content: space-between;
+
+	.mini-block{
+		.display;
+		flex-direction: column;
+		
+		width: 40%;
+		padding: 1rem 0;
+		
+
+		h2{
+			font-family: @Header-font;
+			padding-bottom: 2%;
+		}
+
+		.list {
+			border-top: 1px dashed @grey;
+			border-bottom: 1px dashed @grey;
+		}
+		li{
+			border-top: 1px solid @bck-grey;
+			padding: 2%;
+		}
+	}
+}
+
 
